Added multiple new code elements in the code element analysis

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -77,25 +77,31 @@
     <Compile Include="AddOnConstruction\AddOnConstructor.cs" />
     <Compile Include="AddOnConstruction\CodeFile.cs" />
     <Compile Include="AnalyzedProjectInfo.cs" />
+    <Compile Include="CodeElementAnalysis\AccessorList.cs" />
     <Compile Include="CodeElementAnalysis\Analyzer.cs" />
     <Compile Include="CodeElementAnalysis\ArgumentList.cs" />
     <Compile Include="CodeElementAnalysis\ArrayCreationExpression.cs" />
     <Compile Include="CodeElementAnalysis\ArrayInitializerExpression.cs" />
+    <Compile Include="CodeElementAnalysis\AsExpression.cs" />
     <Compile Include="CodeElementAnalysis\Block.cs" />
     <Compile Include="CodeElementAnalysis\BracketedArgumentList.cs" />
     <Compile Include="CodeElementAnalysis\EqualsValueClause.cs" />
     <Compile Include="CodeElementAnalysis\FieldDeclaration.cs" />
     <Compile Include="CodeElementAnalysis\GenericName.cs" />
     <Compile Include="CodeElementAnalysis\IDocumentVisitor.cs" />
+    <Compile Include="CodeElementAnalysis\IfStatement.cs" />
     <Compile Include="CodeElementAnalysis\ImplicitArrayCreationExpression.cs" />
-    <Compile Include="CodeElementAnalysis\Line.cs" />
+    <Compile Include="CodeElementAnalysis\IsExpression.cs" />
     <Compile Include="CodeElementAnalysis\MethodDeclaration.cs" />
     <Compile Include="CodeElementAnalysis\NullLiteralExpression.cs" />
     <Compile Include="CodeElementAnalysis\NumericLiteralExpression.cs" />
     <Compile Include="CodeElementAnalysis\ObjectCreationExpression.cs" />
     <Compile Include="CodeElementAnalysis\ObjectInitializerExpression.cs" />
     <Compile Include="CodeElementAnalysis\Parameter.cs" />
+    <Compile Include="CodeElementAnalysis\ParenthesizedExpression.cs" />
     <Compile Include="CodeElementAnalysis\PredefinedType.cs" />
+    <Compile Include="CodeElementAnalysis\PropertyDeclaration.cs" />
+    <Compile Include="CodeElementAnalysis\ReturnStatement.cs" />
     <Compile Include="CodeElementAnalysis\Scope.cs" />
     <Compile Include="CodeElementAnalysis\SimpleAssignmentExpression.cs" />
     <Compile Include="CodeElementAnalysis\SimpleMemberAccessExpression.cs" />
