--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -78,19 +78,27 @@
     <Compile Include="AddOnConstruction\CodeFile.cs" />
     <Compile Include="AnalyzedProjectInfo.cs" />
     <Compile Include="CodeElementAnalysis\AccessorList.cs" />
+    <Compile Include="CodeElementAnalysis\AddExpression.cs" />
     <Compile Include="CodeElementAnalysis\Analyzer.cs" />
     <Compile Include="CodeElementAnalysis\ArgumentList.cs" />
     <Compile Include="CodeElementAnalysis\ArrayCreationExpression.cs" />
     <Compile Include="CodeElementAnalysis\ArrayInitializerExpression.cs" />
     <Compile Include="CodeElementAnalysis\AsExpression.cs" />
+    <Compile Include="CodeElementAnalysis\BaseExpression.cs" />
     <Compile Include="CodeElementAnalysis\Block.cs" />
     <Compile Include="CodeElementAnalysis\BracketedArgumentList.cs" />
+    <Compile Include="CodeElementAnalysis\CastExpression.cs" />
+    <Compile Include="CodeElementAnalysis\EnumDeclaration.cs" />
+    <Compile Include="CodeElementAnalysis\EnumMemberDeclaration.cs" />
+    <Compile Include="CodeElementAnalysis\EqualsExpression.cs" />
     <Compile Include="CodeElementAnalysis\EqualsValueClause.cs" />
+    <Compile Include="CodeElementAnalysis\FalseLiteralExpression.cs" />
     <Compile Include="CodeElementAnalysis\FieldDeclaration.cs" />
     <Compile Include="CodeElementAnalysis\GenericName.cs" />
     <Compile Include="CodeElementAnalysis\IDocumentVisitor.cs" />
     <Compile Include="CodeElementAnalysis\IfStatement.cs" />
     <Compile Include="CodeElementAnalysis\ImplicitArrayCreationExpression.cs" />
+    <Compile Include="CodeElementAnalysis\InterfaceDeclaration.cs" />
     <Compile Include="CodeElementAnalysis\IsExpression.cs" />
     <Compile Include="CodeElementAnalysis\MethodDeclaration.cs" />
     <Compile Include="CodeElementAnalysis\NullLiteralExpression.cs" />
