More code elements

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -88,12 +88,16 @@
     <Compile Include="CodeElementAnalysis\Block.cs" />
     <Compile Include="CodeElementAnalysis\BracketedArgumentList.cs" />
     <Compile Include="CodeElementAnalysis\CastExpression.cs" />
+    <Compile Include="CodeElementAnalysis\CatchDeclaration.cs" />
+    <Compile Include="CodeElementAnalysis\CharacterLiteralExpression.cs" />
+    <Compile Include="CodeElementAnalysis\ElseClause.cs" />
     <Compile Include="CodeElementAnalysis\EnumDeclaration.cs" />
     <Compile Include="CodeElementAnalysis\EnumMemberDeclaration.cs" />
     <Compile Include="CodeElementAnalysis\EqualsExpression.cs" />
     <Compile Include="CodeElementAnalysis\EqualsValueClause.cs" />
     <Compile Include="CodeElementAnalysis\FalseLiteralExpression.cs" />
     <Compile Include="CodeElementAnalysis\FieldDeclaration.cs" />
+    <Compile Include="CodeElementAnalysis\ForEachStatement.cs" />
     <Compile Include="CodeElementAnalysis\GenericName.cs" />
     <Compile Include="CodeElementAnalysis\IDocumentVisitor.cs" />
     <Compile Include="CodeElementAnalysis\IfStatement.cs" />
@@ -101,12 +105,15 @@
     <Compile Include="CodeElementAnalysis\InterfaceDeclaration.cs" />
     <Compile Include="CodeElementAnalysis\IsExpression.cs" />
     <Compile Include="CodeElementAnalysis\MethodDeclaration.cs" />
+    <Compile Include="CodeElementAnalysis\NotEqualsExpression.cs" />
     <Compile Include="CodeElementAnalysis\NullLiteralExpression.cs" />
     <Compile Include="CodeElementAnalysis\NumericLiteralExpression.cs" />
     <Compile Include="CodeElementAnalysis\ObjectCreationExpression.cs" />
     <Compile Include="CodeElementAnalysis\ObjectInitializerExpression.cs" />
     <Compile Include="CodeElementAnalysis\Parameter.cs" />
     <Compile Include="CodeElementAnalysis\ParenthesizedExpression.cs" />
+    <Compile Include="CodeElementAnalysis\PostDecrementExpression.cs" />
+    <Compile Include="CodeElementAnalysis\PostIncrementExpression.cs" />
     <Compile Include="CodeElementAnalysis\PredefinedType.cs" />
     <Compile Include="CodeElementAnalysis\PropertyDeclaration.cs" />
     <Compile Include="CodeElementAnalysis\ReturnStatement.cs" />
@@ -116,7 +123,9 @@
     <Compile Include="CodeElementAnalysis\Statement.cs" />
     <Compile Include="CodeElementAnalysis\StringLiteralExpression.cs" />
     <Compile Include="CodeElementAnalysis\ThisExpression.cs" />
+    <Compile Include="CodeElementAnalysis\ThrowStatement.cs" />
     <Compile Include="CodeElementAnalysis\TrueLiteralExpression.cs" />
+    <Compile Include="CodeElementAnalysis\TryStatement.cs" />
     <Compile Include="CodeElementAnalysis\TypeArgumentList.cs" />
     <Compile Include="CodeElementAnalysis\TypeParameter.cs" />
     <Compile Include="CodeElementAnalysis\TypeParameterList.cs" />
