More visitors. Splitted the container element into a delimitered container element.

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -97,6 +97,7 @@
     <Compile Include="CodeElementAnalysis\CollectionInitializerExpression.cs" />
     <Compile Include="CodeElementAnalysis\ComplexElementInitializerExpression.cs" />
     <Compile Include="CodeElementAnalysis\ConditionalExpression.cs" />
+    <Compile Include="CodeElementAnalysis\DelimiteredContainerElement.cs" />
     <Compile Include="CodeElementAnalysis\ElseClause.cs" />
     <Compile Include="CodeElementAnalysis\EnumDeclaration.cs" />
     <Compile Include="CodeElementAnalysis\EnumMemberDeclaration.cs" />
@@ -154,17 +155,22 @@
     <Compile Include="AddOnConstruction\LuaAddOn.cs" />
     <Compile Include="ISyntaxAnalyser.cs" />
     <Compile Include="LuaFileWriter.cs" />
+    <Compile Include="LuaVisitor\AttributeListVisitor.cs" />
     <Compile Include="LuaVisitor\BlockVisitor.cs" />
     <Compile Include="LuaVisitor\ClassVisitor.cs" />
     <Compile Include="LuaVisitor\Extensions.cs" />
     <Compile Include="LuaVisitor\GenericNameVisitor.cs" />
     <Compile Include="LuaVisitor\IdentifierNameVisitor.cs" />
+    <Compile Include="LuaVisitor\InterfaceDeclarationVisitor.cs" />
     <Compile Include="LuaVisitor\MethodDeclarationVisitor.cs" />
     <Compile Include="LuaVisitor\NumericLiteralExpressionVisitor.cs" />
     <Compile Include="LuaVisitor\FieldDeclarationVisitor.cs" />
     <Compile Include="LuaVisitor\ParameterListVisitor.cs" />
     <Compile Include="LuaVisitor\ParameterVisitor.cs" />
     <Compile Include="LuaVisitor\PredefinedTypeVisitor.cs" />
+    <Compile Include="LuaVisitor\PropertyDeclarationVisitor.cs" />
+    <Compile Include="LuaVisitor\SimpleVisitors.cs" />
+    <Compile Include="LuaVisitor\StringLiteralExpressionVisitor.cs" />
     <Compile Include="LuaVisitor\TypeVisitor.cs" />
     <Compile Include="LuaVisitor\VisitorList.cs" />
     <Compile Include="LuaVisitor\IVisitor.cs" />
