--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -162,16 +162,20 @@
     <Compile Include="LuaVisitor\GenericNameVisitor.cs" />
     <Compile Include="LuaVisitor\IdentifierNameVisitor.cs" />
     <Compile Include="LuaVisitor\InterfaceDeclarationVisitor.cs" />
+    <Compile Include="LuaVisitor\LuaVisitorException.cs" />
     <Compile Include="LuaVisitor\MethodDeclarationVisitor.cs" />
     <Compile Include="LuaVisitor\NumericLiteralExpressionVisitor.cs" />
     <Compile Include="LuaVisitor\FieldDeclarationVisitor.cs" />
+    <Compile Include="LuaVisitor\ObjectCreationExpressionVisitor.cs" />
     <Compile Include="LuaVisitor\ParameterListVisitor.cs" />
     <Compile Include="LuaVisitor\ParameterVisitor.cs" />
     <Compile Include="LuaVisitor\PredefinedTypeVisitor.cs" />
     <Compile Include="LuaVisitor\PropertyDeclarationVisitor.cs" />
     <Compile Include="LuaVisitor\SimpleVisitors.cs" />
+    <Compile Include="LuaVisitor\StatementVisitor.cs" />
     <Compile Include="LuaVisitor\StringLiteralExpressionVisitor.cs" />
     <Compile Include="LuaVisitor\TypeVisitor.cs" />
+    <Compile Include="LuaVisitor\VariableDeclaratorVisitor.cs" />
     <Compile Include="LuaVisitor\VisitorList.cs" />
     <Compile Include="LuaVisitor\IVisitor.cs" />
     <Compile Include="LuaVisitor\LuaDocumentVisitor.cs" />
