--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -142,6 +142,7 @@
     <Compile Include="CodeElementAnalysis\SubtractAssignmentExpression.cs" />
     <Compile Include="CodeElementAnalysis\ThisExpression.cs" />
     <Compile Include="CodeElementAnalysis\ThrowStatement.cs" />
+    <Compile Include="CodeElementAnalysis\ThrowStatementVisitor.cs" />
     <Compile Include="CodeElementAnalysis\TrueLiteralExpression.cs" />
     <Compile Include="CodeElementAnalysis\TryStatement.cs" />
     <Compile Include="CodeElementAnalysis\TypeArgumentList.cs" />
@@ -173,6 +174,7 @@
     <Compile Include="LuaVisitor\ObjectCreationExpressionVisitor.cs" />
     <Compile Include="LuaVisitor\ParameterListVisitor.cs" />
     <Compile Include="LuaVisitor\ParameterVisitor.cs" />
+    <Compile Include="LuaVisitor\PostDecrementExpressionVisitor.cs" />
     <Compile Include="LuaVisitor\PostIncrementExpressionVisitor.cs" />
     <Compile Include="LuaVisitor\PredefinedTypeVisitor.cs" />
     <Compile Include="LuaVisitor\PropertyDeclarationVisitor.cs" />
