--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -157,6 +157,7 @@
     <Compile Include="ISyntaxAnalyser.cs" />
     <Compile Include="LuaFileWriter.cs" />
     <Compile Include="LuaVisitor\ArgumentListVisitor.cs" />
+    <Compile Include="LuaVisitor\ArrayVisitor.cs" />
     <Compile Include="LuaVisitor\AttributeListVisitor.cs" />
     <Compile Include="LuaVisitor\BlockVisitor.cs" />
     <Compile Include="LuaVisitor\BracketedArgumentListVisitor.cs" />
@@ -170,11 +171,13 @@
     <Compile Include="LuaVisitor\IdentifierNameVisitor.cs" />
     <Compile Include="LuaVisitor\IfStatementVisitor.cs" />
     <Compile Include="LuaVisitor\InterfaceDeclarationVisitor.cs" />
+    <Compile Include="LuaVisitor\IsExpressionVisitor.cs" />
     <Compile Include="LuaVisitor\LuaVisitorException.cs" />
     <Compile Include="LuaVisitor\MethodDeclarationVisitor.cs" />
     <Compile Include="LuaVisitor\NumericLiteralExpressionVisitor.cs" />
     <Compile Include="LuaVisitor\FieldDeclarationVisitor.cs" />
     <Compile Include="LuaVisitor\ObjectCreationExpressionVisitor.cs" />
+    <Compile Include="LuaVisitor\ObjectInitializerExpressionVisitor.cs" />
     <Compile Include="LuaVisitor\ParameterListVisitor.cs" />
     <Compile Include="LuaVisitor\ParameterVisitor.cs" />
     <Compile Include="LuaVisitor\PostDecrementExpressionVisitor.cs" />
