--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -98,6 +98,7 @@
     <Compile Include="CodeElementAnalysis\ComplexElementInitializerExpression.cs" />
     <Compile Include="CodeElementAnalysis\ConditionalExpression.cs" />
     <Compile Include="CodeElementAnalysis\DelimiteredContainerElement.cs" />
+    <Compile Include="CodeElementAnalysis\ElementWithInnerElement.cs" />
     <Compile Include="CodeElementAnalysis\ElseClause.cs" />
     <Compile Include="CodeElementAnalysis\EnumDeclaration.cs" />
     <Compile Include="CodeElementAnalysis\EnumMemberDeclaration.cs" />
@@ -159,6 +160,8 @@
     <Compile Include="LuaVisitor\ArgumentListVisitor.cs" />
     <Compile Include="LuaVisitor\ArrayVisitor.cs" />
     <Compile Include="LuaVisitor\AttributeListVisitor.cs" />
+    <Compile Include="LuaVisitor\BaseExpressionVisitor.cs" />
+    <Compile Include="LuaVisitor\BaseOpenCloseVisitor.cs" />
     <Compile Include="LuaVisitor\BlockVisitor.cs" />
     <Compile Include="LuaVisitor\BracketedArgumentListVisitor.cs" />
     <Compile Include="LuaVisitor\ClassVisitor.cs" />
@@ -183,6 +186,7 @@
     <Compile Include="LuaVisitor\ObjectInitializerExpressionVisitor.cs" />
     <Compile Include="LuaVisitor\ParameterListVisitor.cs" />
     <Compile Include="LuaVisitor\ParameterVisitor.cs" />
+    <Compile Include="LuaVisitor\ParenthesizedExpressionVisitor.cs" />
     <Compile Include="LuaVisitor\PostDecrementExpressionVisitor.cs" />
     <Compile Include="LuaVisitor\PostIncrementExpressionVisitor.cs" />
     <Compile Include="LuaVisitor\PredefinedTypeVisitor.cs" />
