Fixed ambgious references handling.

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -197,6 +197,7 @@
     <Compile Include="LuaVisitor\StatementVisitor.cs" />
     <Compile Include="LuaVisitor\StringLiteralExpressionVisitor.cs" />
     <Compile Include="LuaVisitor\AssignmentExpressionVisitor.cs" />
+    <Compile Include="LuaVisitor\ThisExpressionVisitor.cs" />
     <Compile Include="LuaVisitor\TryStatementVisitor.cs" />
     <Compile Include="LuaVisitor\TypeArgumentListVisitor.cs" />
     <Compile Include="LuaVisitor\TypeOfExpressionVisitor.cs" />
