Added subtraction. 25 out of 82 tests succeded.

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -141,6 +141,7 @@
     <Compile Include="CodeElementAnalysis\Statements\StatementType.cs" />
     <Compile Include="CodeElementAnalysis\StringLiteralExpression.cs" />
     <Compile Include="CodeElementAnalysis\SubtractAssignmentExpression.cs" />
+    <Compile Include="CodeElementAnalysis\SubtractExpression.cs" />
     <Compile Include="CodeElementAnalysis\ThisExpression.cs" />
     <Compile Include="CodeElementAnalysis\ThrowStatement.cs" />
     <Compile Include="CodeElementAnalysis\ThrowStatementVisitor.cs" />
