33 out of 82 passing.

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -321,11 +321,13 @@
     <None Include="Lua\Meta\ArgumentMatching.lua" />
     <None Include="Lua\Meta\DefaultValue.lua" />
     <None Include="Lua\Meta\Dot.lua" />
+    <None Include="Lua\Meta\Enum.lua" />
     <None Include="Lua\Meta\InteractionElement.lua" />
     <None Include="Lua\Meta\NamespaceElement.lua" />
     <None Include="Lua\Meta\Throw.lua" />
     <None Include="Lua\Meta\Try.lua" />
     <None Include="Lua\Meta\aa._M.lua" />
+    <None Include="Lua\System\System.Enum.lua" />
     <None Include="Lua\System\System.Bool.lua" />
     <None Include="Lua\System\System.Double.lua" />
     <None Include="Lua\System\System.Exception.lua" />
