Progress on generics in methods.

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -327,6 +327,7 @@
     <None Include="Lua\Meta\DefaultValue.lua" />
     <None Include="Lua\Meta\Dot.lua" />
     <None Include="Lua\Meta\Enum.lua" />
+    <None Include="Lua\Meta\GenericMethod.lua" />
     <None Include="Lua\Meta\InteractionElement.lua" />
     <None Include="Lua\Meta\NamespaceElement.lua" />
     <None Include="Lua\Meta\Throw.lua" />
