--- a/CsLuaTest/CsLuaTest/CsLuaTest.csproj
+++ b/CsLuaTest/CsLuaTest/CsLuaTest.csproj
@@ -132,6 +132,7 @@
     <Compile Include="TypeMethods\TypeMethodsTests.cs" />
     <Compile Include="Type\ClassA.cs" />
     <Compile Include="Type\ClassB.cs" />
+    <Compile Include="Type\GenericTypeTestClass.cs" />
     <Compile Include="Type\InterfaceA.cs" />
     <Compile Include="Type\TypeTests.cs" />
     <Compile Include="Wrap\ClassA.cs" />
