--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@
 /CsLuaTest/CsLuaTest/obj/Debug
 /CsLuaTest/CsLuaTestRunner/bin/Debug
 /CsLuaTest/CsLuaTestRunner/obj/Debug
+/CsLuaTest/CsLuaTest.sln.DotSettings.user
