--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -330,7 +330,9 @@
     <None Include="Lua\Meta\aa._M.lua" />
     <None Include="Lua\System\Collections\aa.lua" />
     <None Include="Lua\System\Collections\Generic\aa.lua" />
-    <None Include="Lua\System\Collections\Generic\IList.lua" />
+    <None Include="Lua\System\Collections\IEnumerable.lua" />
+    <None Include="Lua\System\Collections\ICollection.lua" />
+    <None Include="Lua\System\Collections\IList.lua" />
     <None Include="Lua\System\System.Func.lua" />
     <None Include="Lua\System\System.Enum.lua" />
     <None Include="Lua\System\System.Bool.lua" />
