--- a/CsLuaTest/CsLuaTest/CsLuaTest.csproj
+++ b/CsLuaTest/CsLuaTest/CsLuaTest.csproj
@@ -67,9 +67,15 @@
     <Compile Include="Arrays\ClassWithArrays.cs" />
     <Compile Include="Collections\CollectionsTests.cs" />
     <Compile Include="General\ACommonName.cs" />
+    <Compile Include="General\Base.cs" />
+    <Compile Include="General\ClassAmb.cs" />
     <Compile Include="General\ClassInitializerAndCstor.cs" />
     <Compile Include="General\ClassWithEquals.cs" />
     <Compile Include="General\ClassWithProperty.cs" />
+    <Compile Include="General\ClassWithTypeAndVariableNaming.cs" />
+    <Compile Include="General\GeneralTests.cs" />
+    <Compile Include="General\Inheriter.cs" />
+    <Compile Include="General\NonStaticClass.cs" />
     <Compile Include="Generics\ClassA.cs" />
     <Compile Include="Generics\ClassWithGenericConstructor.cs" />
     <Compile Include="AmbigousMethods\EnumA.cs" />
@@ -82,18 +88,12 @@
     <Compile Include="DefaultValues\DefaultValuesClass.cs" />
     <Compile Include="DefaultValues\DefaultValuesTests.cs" />
     <Compile Include="DefaultValues\ReferencedClass.cs" />
-    <Compile Include="General\Base.cs" />
-    <Compile Include="General\ClassAmb.cs" />
-    <Compile Include="General\ClassWithTypeAndVariableNaming.cs" />
-    <Compile Include="General\GeneralTests.cs" />
     <Compile Include="Generics\GenericsTests.cs" />
     <Compile Include="IndentedLineWriter.cs" />
     <Compile Include="Interfaces\ClassA.cs" />
     <Compile Include="Interfaces\IBaseInterface.cs" />
     <Compile Include="Interfaces\IInheritingInterface.cs" />
-    <Compile Include="General\Inheriter.cs" />
     <Compile Include="Interfaces\InheritingInterfaceImplementation.cs" />
-    <Compile Include="General\NonStaticClass.cs" />
     <Compile Include="Params\ClassWithParams.cs" />
     <Compile Include="Params\ParamsTests.cs" />
     <Compile Include="Static\StaticClass.cs" />
@@ -164,7 +164,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Override\General\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>cmd /c ""$(SolutionDir)CsLuaConverter\CsLuaConverter.exe" "$(SolutionPath)" "$(SolutionDir)..\..\AddOns""</PostBuildEvent>
