--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -108,12 +108,15 @@
     <Compile Include="CodeElementAnalysis\FieldDeclaration.cs" />
     <Compile Include="CodeElementAnalysis\ForEachStatement.cs" />
     <Compile Include="CodeElementAnalysis\GenericName.cs" />
+    <Compile Include="CodeElementAnalysis\GreaterThanExpression.cs" />
     <Compile Include="CodeElementAnalysis\IDocumentVisitor.cs" />
     <Compile Include="CodeElementAnalysis\IfStatement.cs" />
     <Compile Include="CodeElementAnalysis\ImplicitArrayCreationExpression.cs" />
     <Compile Include="CodeElementAnalysis\InterfaceDeclaration.cs" />
     <Compile Include="CodeElementAnalysis\InterfaceElement.cs" />
     <Compile Include="CodeElementAnalysis\IsExpression.cs" />
+    <Compile Include="CodeElementAnalysis\LessThanExpression.cs" />
+    <Compile Include="CodeElementAnalysis\LogicalAndExpression.cs" />
     <Compile Include="CodeElementAnalysis\LogicalNotExpression.cs" />
     <Compile Include="CodeElementAnalysis\MethodDeclaration.cs" />
     <Compile Include="CodeElementAnalysis\MultiplyExpression.cs" />
@@ -313,7 +316,9 @@
       <Name>CsLuaFramework</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Lua\Meta\Extensions.lua" />
+  </ItemGroup>
   <ImportGroup Label="Targets">
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
