All GrindOMeter tests passing.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,21 @@
 /CsLuaTest/CsLuaTestRunner/bin/Debug
 /CsLuaTest/CsLuaTestRunner/obj/Debug
 /CsLuaTest/CsLuaTest.sln.DotSettings.user
+*.suo
+/CsLuaProjects/BlizzardApi/bin/Debug
+/CsLuaProjects/BlizzardApi/obj/Debug
+/CsLuaProjects/CsLuaTest/bin/Debug
+/CsLuaProjects/CsLuaTest/obj/Debug
+/CsLuaProjects/CsLuaTestRunner/bin/Debug
+/CsLuaProjects/CsLuaTestRunner/obj/Debug
+/CsLuaProjects/GrindOMeter/bin/Debug
+/CsLuaProjects/GrindOMeter/obj/Debug
+/CsLuaProjects/GrindOMeter.IntegrationTests/bin/Debug
+/CsLuaProjects/GrindOMeter.IntegrationTests/obj/Debug
+/CsLuaProjects/GrindOMeter.UnitTests/bin/Debug
+/CsLuaProjects/GrindOMeter.UnitTests/obj/Debug
+/CsLuaProjects/TestUtils/bin/Debug
+/CsLuaProjects/TestUtils/obj/Debug
+/CsLuaProjects/WoWSimulator/bin/Debug
+/CsLuaProjects/WoWSimulator/obj/Debug
+*.user
