--- a/CsLuaConverter/CsLuaFramework/CsLuaFramework.csproj
+++ b/CsLuaConverter/CsLuaFramework/CsLuaFramework.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Environment.cs" />
     <Compile Include="ICsLuaAddOn.cs" />
     <Compile Include="Attributes\MetadataTagAttribute.cs" />
+    <Compile Include="ISerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Attributes\ProvideSelfAttribute.cs">
       <SubType>Code</SubType>
@@ -56,6 +57,7 @@
     </Compile>
     <Compile Include="Serializer.cs" />
     <Compile Include="Wrapping\IMultipleValues.cs" />
+    <Compile Include="Wrapping\IWrapper.cs" />
     <Compile Include="Wrapping\Wrapper.cs" />
   </ItemGroup>
   <ItemGroup>
